porcentajes x linea rev 1

--- a/ANSv4/Catalogo4/_productos/SearchFilter.resx
+++ b/ANSv4/Catalogo4/_productos/SearchFilter.resx
@@ -124,58 +124,55 @@
   <data name="btnApply0.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAEwAAABMCAYAAADHl1ErAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAALxSURBVHhe7Zo9axRRFIaDSCwETSFKCDb5CTYSbFIEGy0k
-        YJ9O/AHWWwSxCRIQi6iFFnYWadLYrGAhWISErF0aCWFDcBfc7+/1fWUXhsvs7ty9O5Pr+C4MMzt7zplz
-        njn33DN3dm5OHxEQAREQAREQAREQAREQAREQAREQAREQAREQAREQAREQAREQARHwkkAmk7nUarVWut3u
-        VqfT+Y7jk2Kx2OCe33H+fa/Xe4jtipcBJOUUQfX7/cftdvsY+4mfZrN5BoBPstns5aR89OY6lUplEcF/
-        nUgpRAB6R/V6fdmbYOJ2BJlyB1t+GlhDHQArYojejdvXC7dfrVaXUJtOTVilUqmKWvUWw/NBrVa7zXrF
-        PWTv4fyLRqPxy9TBuXPKXHhQcTnA2sMibgYOIJ/K5fLNcdeFzgLk3pi6sHeY2pqG4DZCYG3Z3CBAex4C
-        bcPGxj8hyywwZ0ME/3Ea56H3IQiNdlPXciCotWCQrFmThuEomNSjvgFtbRr43uogK14HA+R3F2eh/2qW
-        9lx8iUUX9WvfqD2rLheCrdWgPdj/5mLPO122AMEAUXOuuTjJdsKsYy72vNM1ZzZXBwk8aBP93W9Xm17p
-        m8BmnWF8UPcqYFdnMEv+UA2zoJjALLlj4Y7/osiwdfVhFveJnbg5U86q00f9+pm6Tp9s0Ss907NkxCzL
-        5XLzyKjdsDUwrVYYEMfBGgIcrIftcD0Mw+sWH9a5H6yHbf4362FRYE2z8soVV8B1eryKODiSE4sLVirX
-        9KPAQuBfsD0NG25hWZfat0ZRYeXz+avMd8pjeN1H8d8GwAPWs0Kh0BsA2ud7Sfz+aCif3BhJ4Eq2sBJw
-        yd9LCJbFvREsC1gURZ15Oa49YIFPZQ2y5PRXnM9x/PPIKGCCZVDlWxzBskw1DMnPIS9YNQxHceS/cQBt
-        j/0TweH4nWpWhKxDLbuOxvNGBFGJiIAIiIAIiIAIiIAIiIAIiIAIiIAIiIAIiIAIiIAIiIAIiMDMCPwB
-        NWKMDsDl26MAAAAASUVORK5CYII=
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAKoSURBVHhe7dq9ixNBGAbwIKKFoBaiiNj4J9iI2FiIzVmI
+        YG8n/gHWKURsDhHE4tTiLOwsbGxsIlgIFodi7K4RkYgkAfP9HZ938ux45vaS3b3zCJPnB2GTnZkX3ped
+        yewmOREREREREREREREREZHFlM/nD/R6vYvD4XB1MBh8xPvvlUqlY0f7jPPro9HoGl6HOWQ5WaHG4/HN
+        fr+/ieNc3W73Jwp4u1AoHGSI5dFoNE4j+fesRSoY96Xdbp9jqPDhSjmPV4n5Z4KCVTFFLzBkuJrN5hms
+        TT+Yt1er1ZpYq55heq60Wq2ztl7ZEX0v4fyDTqdTZlcP535ZH4YOj609togzXw8FeVWv10+yWyx0O45+
+        Tycj/kK8z8GuaUjuFvP0UIRVNieC/vc51LO4bA6HXQXT34ZI/iWbU8G4FwzhWNzgthxI6grzc2zNmjcN
+        d2LjbDxDORafzWHAVfGEuTn2mU2ZYPxjhnJ2G2/hYJ3ZYG6Ry2zKxMZPwkwg/gc2hcG2AMzNwZpzlE2Z
+        2HaCoRxbx9gUBubl8XRmVnCGcrC/+82mMDAvb6+vMLtRZ1MYMGW+MreI1rBZ9uFbco1NYcAVdoO5OdqH
+        zWE78elvSlwVe7LTx/r1LbidvsE6c5c5ekhe95JxisXiIST7mjn+A+f1tGKrWcWK8HnYGtaiFUyvU1YE
+        O/J52L2leR6WpFhZ2BNXFHdXW5OF87+KhWkY3jP9JMVC4u/wuhM33eIE+6tR0mKVSqUjUX9Mr6sY8wjn
+        P9l6Vi6XRyzQBs6vo/161D8oaYu11FSsFFSslFCsh6xLLBVrC7uPsz+PsDbbqFhT7LaGtdlGxdoBpuRb
+        1shTsWawf+OgaG9s/2TFwvvnKlYC1Wr1GDaeJ/hRRERERERERERERERkH+RyfwBnO4wCJwVXHAAAAABJ
+        RU5ErkJggg==
 </value>
   </data>
   <data name="btnApply.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAEwAAABMCAYAAADHl1ErAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAALxSURBVHhe7Zo9axRRFIaDiBYBtRCDSBp/go1ImhQhTVKI
-        kD6d+AOstxCxCSKIRaJFUtilsLGxWcEikCIorp2NiKy4y4L7/b2+b9iF4TK7O3fvzuQ6eReGmZ0958w5
-        z5x77pk7u7CgjwiIgAiIgAiIgAiIgAiIgAiIgAiIgAiIgAiIgAiIgAiIgAiIgAh4SSCTyVxot9v3er3e
-        TrfbPcbxz2Kx2OSe33F+v9/vb2K77GUASTlFUIPBYKvT6XzHfuqn1Wr9BsCH2Wz2YlI+enOdarV6E8F/
-        mkopRAB6XxuNxm1vgonbEWTKHWz5WWCNdACshCF6N25fz9x+rVa7hdr0y4RVLpdrqFWvMTw36vX6MusV
-        95BdwflnzWazaOrg3B/KnHlQcTnA2sMibgYOIIeVSuXGpOtC5xrk9kxd2PuS2pqG4LZDYO3Y3CBAexoC
-        bdvGxn8hyywwZ0ME/3YW56F3EIRGu6lrORDUWjBI1qxpw3AcTOpR34C2Ngt8b3WQFa+CAfK7i7PQfzlP
-        ey6+xKKL+nVi1J5VlwvB1mrQHuwfudjzTpctQDBA1JwrLk6ynTDrmIs973TNmc3VQQIP2kR/99fVplf6
-        JrB5Zxgf1L0K2NUZzJLfVMMsKCYwS+5auOO/KDLsgfowi/vETtycKefV6aN+/Uhdp0+26JUe61kyYpbl
-        crlLyKh3YWtgWq0wIE6CNQI4XA/b5XoYhtcSH9a5H66HPTk362FRYM2y8soVV8B1eryKODiSE4sLVirX
-        9KPAQuAfsT0KG25hWZfat0ZRYeXz+UXmO+UxvNZR/F8A4GfWs0Kh0B8COuF7Sfx+fySf3BhJ4Eq2sBJw
-        yd9LCJbFvREsC1gURZ15Pqk9YIFPZQ2y5HQqzuc4/nlkHDDBMqjyLY5gWaYahuSHkBesGobjOPLfOID2
-        nv0TweH4jWpWhKwrlUpX0XhejyAqEREQAREQAREQAREQAREQAREQAREQAREQAREQAREQAREQARGYG4F/
-        mRSL9pOLtG0AAAAASUVORK5CYII=
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAKnSURBVHhe7dq9ixNBGAbwIKKFoBaiiNj4J9iI2FiIzVmI
+        YG8n/gHWKQ6xOUQQi1OLs7CzsLGxiWAhWByKsbMRkRwhBMz3d3zeybPjmdtLdvfOI0yeH4RNdmZeeF92
+        JrOb5EREREREREREREREREQWUz6fP9Tr9S4Ph8O1wWDwCe9/ViqVjh3tM85vjEajG3gd5ZDlZIUaj8e3
+        +/3+dxzn6na7Wyjg3UKhcJghlkej0TiL5D+wFqlg3Nd2u32BocKHK+UiXiXmnwkKVsUUvcSQ4Wo2m+ew
+        Nv1i3l6tVmtirXqO6bnSarXO23plR/S9gvMPO51OhV09nCtbH4YOj609togzXw8FeV2v10+zWyx0O4l+
+        zyYj/kK8L8GuaUjuDvP0UIQ1NieC/g841LO4bA6HXQXT34ZI/hWbU8G4lwzhWNzgthxI6hrzc2zNmjcN
+        d2PjbDxDORafzWHAVfGUuTn2mU2ZYPwThnL2Gm/hYJ3ZZG6Rq2zKxMZPwkwg/kc2hcG2AMzNwZpznE2Z
+        2HaCoRxbx9gUBubl8XRmVnCGcrC/+82mMDAvb7+vMLtRZ1MYMGW+MbeI1rBZDuBbcp1NYcAVdou5OdqH
+        zWE78elvSlwV+7LTx/r1I7idvsE6c585ekhe95JxisXiEST7hjn+A+f1tGK7WcWK8HnYOtaiFUyvM1YE
+        O/J52OrSPA9LUqws7IkrirunrcnC+V/FwjQM75l+kmIh8fd43YubbnGC/dUoabFKpdKxqD+m13WMeYzz
+        n209K5fLIxZoE+c30H4z6h+UtMVaaipWCipWSijWI9Ylloq1jd3H2Z9HWJsdVKwpdlvD2uygYu0CU/Id
+        a+SpWDPYv3FQtLe2f7Ji4f0LFSuBarV6AhvPU/woIiIiIiIiIiIiIiJyAHK5P+JNi/DRbZnvAAAAAElF
+        TkSuQmCC
 </value>
   </data>
   <data name="btnClearFilters.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAEwAAABMCAYAAADHl1ErAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAMGSURBVHhe7do9aBRBFAfwIGIjikgsREQRESSQQlBJI+ls
-        TJqYQgi2ooGQxkJQz1psbUVsbLUQm8CF2AQLQbg0KdKkOPCuOI/7/vT/YA/MMnP7bld2b5z/wULYezM7
-        73dvdmd3MzPDDwUoQAEKUIACFKAABShAAQpQgAIUoAAFKEABClCAAhQIBCqVylliKAX6/f7r4XC4qgz3
-        OyzAghfBIivhLyw1WKFQONFqta53Op3bg8HgZrvdnms0GpciD+Z6QAjLCpbP548D5h7i3/Z6vZ+lUqkj
-        weFPvV7/jZgviH1SrVZnXfc5Mn4k/sCQ85FzGL4/g+RfooKKJqBx+8rlckuAm83mlf8CTqrABpbL5Y4B
-        9DGmXXlSqHA8rrwN9LUpfToNZwOTpQUq42tSqHB7mapOT1MTGCrhEbYf/xpr1F+3293HFL3sZKWZwFAB
-        9SgsOZ+hWj6g/XNsD4FwH8jr2PcGf+9FtRc0JxfIlilpzRcgW2hzR66Y4yoES41bMv3GwQF4J6qfqatC
-        LRgq4gDb0qQJCO64qyvQnk3aZ6bxGjCZPlhbXYg70Fqtdh4wu6Zqk7UcrsLX4vadejsl2B4S3rZtmHqv
-        ogaO45zDND00oaH9+6j2U/O9BiziPLRdLBZPahLCseZRUb1wf8E+N66aScCk4rRYI1CpJtMPgL5eaNAz
-        j4kLFgdLksX666oJTJYimWNoBhAHLC7WaDxo/82EhrGc1ozZuxiAbVjAbniHoUkYlbRsAVvWtPcuBliL
-        lisvH42bqgEVtmCpsDXvqkeTMMDussI0UkEMwNYsFbYwQTf+hGLx+tEEhhcoF/1RUGYqdwam5224Af+l
-        7MKvMKzBnjp/A57WT4ab7FNSSZYT/mJa43DiOPK2COeuT5Yb7+9OJJHmIHFlXLE9JorzJDfNsWdyrKDC
-        3hleu33OZEAuHDSMJuezJI++Xcg58RhHaPIsX16QJO7Qhw4ETf7bx4dcmSMFKEABClCAAhSgAAUoQAEK
-        UIACFKAABShAAQpQgAIUoMA0CPwB62/0/212rpcAAAAASUVORK5CYII=
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAALESURBVHhe7dk/aBNhGAbwIOIiiogOIqKICCI4CFVcSjcX
+        dVEHQVxFBXFxENQ4i6uriIurDuIiRHQRB0FIFwcXh0CSIYbk8j/xedvnyn3Xu+R6rXIXnx8Ectf3+9J7
+        eL/c12tBRERERERERERERETE12g09vKtzDIajZ5OJpOrPJRpGJZRYLMEwjKJAiuXyzu63e6Jfr9/djwe
+        L/R6vZOe5x3mj+dXKCwTGVipVNqOYC6g/vlwOPxerVb7rHe02+3fqHmH2tvNZnMfh88HXPg1XmeQExiO
+        9+DiH6ODKqs/Tq5er3ct4E6nc5TT5Zt1Aa8taCWwYrG4DYHewrKr83xquPN6mOuezbnywXkVF5htLdAZ
+        73m8ZWyp5nqZRgWGTriJ1zcebrnBYPADS/QIf4V8iQoMHdDm21j2fYZueYXxD/G6gRCuIOQ7OPcM75dZ
+        FstCy+UGOWZJxkIgHzBm0e6YnCISthpnbPlxWCQE/GnWPJmTNDB0xE+8LnJYYhbutLsrQnvA0nxIEpgt
+        H+ytDnLIhrVarQMI5gunc9heDnfh4yzNvoSBLeOCP8a9sPSecLpY+Jz9WKa/OKUD41+yLPuSLsk4Flil
+        UtnJ6abCZ51CRw05dA3P5eOuuZnANhKWz7qJwx2Y6xFLsi1tYGnCMth/HeMUDlv2LMm2NIGlDcuH8Z85
+        lQO/y26WSBACu8uMHAjsNEskCMFcYkYOO88SCUI2S6sRraMnvVHQSecYkAPnr7NEghDMeWYUpg6LYp3E
+        gBzWeSyRIGxeXzMjh+d5h1giPtu/RT1vwx/gVZZIEPZg95mRI1d/gP8rtVptl3USMwpbYpkY+28RuugN
+        w3Gg676yTHy4A15mPuukeZI799hhL5jRGpx7yxIJC4dm32ebefT9X/BDs2f5WKaLPC3TWGgIa4GHIiIi
+        IiIiIiIiIiIiIn9VofAHHXP08AHf5DIAAAAASUVORK5CYII=
 </value>
   </data>
 </root>
