revision final version 6

--- a/ANSv4_r1/Catalogo4/_productos/SearchFilter.resx
+++ b/ANSv4_r1/Catalogo4/_productos/SearchFilter.resx
@@ -125,54 +125,54 @@
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAEwAAABMCAYAAADHl1ErAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
         YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAKoSURBVHhe7dq9ixNBGAbwIKKFoBaiiNj4J9iI2FiIzVmI
-        YG8n/gHWKURsDhHE4tTiLOwsbGxsIlgIFodi7K4RkYgkAfP9HZ938ux45vaS3b3zCJPnB2GTnZkX3ped
+        YG8n/gHWKURsDhHE4tTiLOwsbGxsIlgIFodi7K4RkYgJAfP9HZ938ux45vaS3b3zCJPnB2GTnZkX3ped
         yewmOREREREREREREREREZHFlM/nD/R6vYvD4XB1MBh8xPvvlUqlY0f7jPPro9HoGl6HOWQ5WaHG4/HN
         fr+/ieNc3W73Jwp4u1AoHGSI5dFoNE4j+fesRSoY96Xdbp9jqPDhSjmPV4n5Z4KCVTFFLzBkuJrN5hms
-        TT+Yt1er1ZpYq55heq60Wq2ztl7ZEX0v4fyDTqdTZlcP535ZH4YOj609togzXw8FeVWv10+yWyx0O45+
+        TT+Yt1er1ZpYq55heq60Wq2ztl7ZEX0v4fyDTqdTYVcP535ZH4YOj609togzXw8FeVWv10+yWyx0O45+
         Tycj/kK8z8GuaUjuFvP0UIRVNieC/vc51LO4bA6HXQXT34ZI/iWbU8G4FwzhWNzgthxI6grzc2zNmjcN
         d2LjbDxDORafzWHAVfGEuTn2mU2ZYPxjhnJ2G2/hYJ3ZYG6Ry2zKxMZPwkwg/gc2hcG2AMzNwZpzlE2Z
         2HaCoRxbx9gUBubl8XRmVnCGcrC/+82mMDAvb6+vMLtRZ1MYMGW+MreI1rBZ9uFbco1NYcAVdoO5OdqH
         zWE78elvSlwVe7LTx/r1LbidvsE6c5c5ekhe95JxisXiIST7mjn+A+f1tGKrWcWK8HnYGtaiFUyvU1YE
         O/J52L2leR6WpFhZ2BNXFHdXW5OF87+KhWkY3jP9JMVC4u/wuhM33eIE+6tR0mKVSqUjUX9Mr6sY8wjn
         P9l6Vi6XRyzQBs6vo/161D8oaYu11FSsFFSslFCsh6xLLBVrC7uPsz+PsDbbqFhT7LaGtdlGxdoBpuRb
-        1shTsWawf+OgaG9s/2TFwvvnKlYC1Wr1GDaeJ/hRRERERERERERERERkH+RyfwBnO4wCJwVXHAAAAABJ
+        1shTsWawf+OgaG9s/2TFwvvnKlYC1Wr1GDaeJ/hRRERERERERERERERkH+RyfwCZFIv2phNd2wAAAABJ
         RU5ErkJggg==
 </value>
   </data>
   <data name="btnApply.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAEwAAABMCAYAAADHl1ErAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAKnSURBVHhe7dq9ixNBGAbwIKKFoBaiiNj4J9iI2FiIzVmI
-        YG8n/gHWKQ6xOUQQi1OLs7CzsLGxiWAhWByKsbMRkRwhBMz3d3zeybPjmdtLdvfOI0yeH4RNdmZeeF92
-        JrOb5EREREREREREREREREQWUz6fP9Tr9S4Ph8O1wWDwCe9/ViqVjh3tM85vjEajG3gd5ZDlZIUaj8e3
-        +/3+dxzn6na7Wyjg3UKhcJghlkej0TiL5D+wFqlg3Nd2u32BocKHK+UiXiXmnwkKVsUUvcSQ4Wo2m+ew
-        Nv1i3l6tVmtirXqO6bnSarXO23plR/S9gvMPO51OhV09nCtbH4YOj609togzXw8FeV2v10+zWyx0O4l+
-        zyYj/kK8L8GuaUjuDvP0UIQ1NieC/g841LO4bA6HXQXT34ZI/hWbU8G4lwzhWNzgthxI6hrzc2zNmjcN
-        d2PjbDxDORafzWHAVfGUuTn2mU2ZYPwThnL2Gm/hYJ3ZZG6Rq2zKxMZPwkwg/kc2hcG2AMzNwZpznE2Z
-        2HaCoRxbx9gUBubl8XRmVnCGcrC/+82mMDAvb7+vMLtRZ1MYMGW+MbeI1rBZDuBbcp1NYcAVdou5OdqH
-        zWE78elvSlwV+7LTx/r1I7idvsE6c585ekhe95JxisXiEST7hjn+A+f1tGK7WcWK8HnYOtaiFUyvM1YE
-        O/J52OrSPA9LUqws7IkrirunrcnC+V/FwjQM75l+kmIh8fd43YubbnGC/dUoabFKpdKxqD+m13WMeYzz
-        n209K5fLIxZoE+c30H4z6h+UtMVaaipWCipWSijWI9Ylloq1jd3H2Z9HWJsdVKwpdlvD2uygYu0CU/Id
-        a+SpWDPYv3FQtLe2f7Ji4f0LFSuBarV6AhvPU/woIiIiIiIiIiIiIiJyAHK5P+JNi/DRbZnvAAAAAElF
-        TkSuQmCC
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAKoSURBVHhe7dq9ixNBGAbwIKKFoBaiiNj4J9iI2FiIzVmI
+        YG8n/gHWKURsDhHE4tTiLOwsbGxsIlgIFodi7K4RkRgJAfP9HZ938ux45vaS3b3zCJPnB2GTnZkX3ped
+        yewmOREREREREREREREREZHFlM/nD/R6vYvD4XB1MBh8xPvvlUqlY0f7jPPro9HoGl6HOWQ5WaHG4/HN
+        fr+/ieNc3W73Jwp4u1AoHGSI5dFoNE4j+fesRSoY96Xdbp9jqPDhSjmPV4n5Z4KCVTFFLzBkuJrN5hms
+        TT+Yt1er1ZpYq55heq60Wq2ztl7ZEX0v4fyDTqdTYVcP535ZH4YOj609togzXw8FeVWv10+yWyx0O45+
+        Tycj/kK8z8GuaUjuFvP0UIRVNieC/vc51LO4bA6HXQXT34ZI/iWbU8G4FwzhWNzgthxI6grzc2zNmjcN
+        d2LjbDxDORafzWHAVfGEuTn2mU2ZYPxjhnJ2G2/hYJ3ZYG6Ry2zKxMZPwkwg/gc2hcG2AMzNwZpzlE2Z
+        2HaCoRxbx9gUBubl8XRmVnCGcrC/+82mMDAvb6+vMLtRZ1MYMGW+MreI1rBZ9uFbco1NYcAVdoO5OdqH
+        zWE78elvSlwVe7LTx/r1LbidvsE6c5c5ekhe95JxisXiIST7mjn+A+f1tGKrWcWK8HnYGtaiFUyvU1YE
+        O/J52L2leR6WpFhZ2BNXFHdXW5OF87+KhWkY3jP9JMVC4u/wuhM33eIE+6tR0mKVSqUjUX9Mr6sY8wjn
+        P9l6Vi6XRyzQBs6vo/161D8oaYu11FSsFFSslFCsh6xLLBVrC7uPsz+PsDbbqFhT7LaGtdlGxdoBpuRb
+        1shTsWawf+OgaG9s/2TFwvvnKlYC1Wr1GDaeJ/hRRERERERERERERERkH+RyfwArlYvqt+T9dAAAAABJ
+        RU5ErkJggg==
 </value>
   </data>
   <data name="btnClearFilters.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAEwAAABMCAYAAADHl1ErAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAALESURBVHhe7dk/aBNhGAbwIOIiiogOIqKICCI4CFVcSjcX
-        dVEHQVxFBXFxENQ4i6uriIurDuIiRHQRB0FIFwcXh0CSIYbk8j/xedvnyn3Xu+R6rXIXnx8Ectf3+9J7
-        eL/c12tBRERERERERERERETE12g09vKtzDIajZ5OJpOrPJRpGJZRYLMEwjKJAiuXyzu63e6Jfr9/djwe
-        L/R6vZOe5x3mj+dXKCwTGVipVNqOYC6g/vlwOPxerVb7rHe02+3fqHmH2tvNZnMfh88HXPg1XmeQExiO
-        9+DiH6ODKqs/Tq5er3ct4E6nc5TT5Zt1Aa8taCWwYrG4DYHewrKr83xquPN6mOuezbnywXkVF5htLdAZ
-        73m8ZWyp5nqZRgWGTriJ1zcebrnBYPADS/QIf4V8iQoMHdDm21j2fYZueYXxD/G6gRCuIOQ7OPcM75dZ
-        FstCy+UGOWZJxkIgHzBm0e6YnCISthpnbPlxWCQE/GnWPJmTNDB0xE+8LnJYYhbutLsrQnvA0nxIEpgt
-        H+ytDnLIhrVarQMI5gunc9heDnfh4yzNvoSBLeOCP8a9sPSecLpY+Jz9WKa/OKUD41+yLPuSLsk4Flil
-        UtnJ6abCZ51CRw05dA3P5eOuuZnANhKWz7qJwx2Y6xFLsi1tYGnCMth/HeMUDlv2LMm2NIGlDcuH8Z85
-        lQO/y26WSBACu8uMHAjsNEskCMFcYkYOO88SCUI2S6sRraMnvVHQSecYkAPnr7NEghDMeWYUpg6LYp3E
-        gBzWeSyRIGxeXzMjh+d5h1giPtu/RT1vwx/gVZZIEPZg95mRI1d/gP8rtVptl3USMwpbYpkY+28RuugN
-        w3Gg676yTHy4A15mPuukeZI799hhL5jRGpx7yxIJC4dm32ebefT9X/BDs2f5WKaLPC3TWGgIa4GHIiIi
-        IiIiIiIiIiIiIn9VofAHHXP08AHf5DIAAAAASUVORK5CYII=
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAALFSURBVHhe7dk/aBNhGAbwIOIiiogOImIREURwEKq4lG4u
+        6qIOgriKCuLiIKhxFldXERdXHcSlELGLOAhCuji4OISYDDEkl/+Jz9s+V+5L75LrtcpdfH4QyF3f70vv
+        4f1yX685ERERERERERERERERX61W28+3Ms1gMHg2Go2u8VAmYVhGgU0TCMvECqxYLO5qt9snu93uueFw
+        ON/pdE55nneUP55dY2GZ0MAKhcJOBHMR9S/6/f63crncZb2j2Wz+Rs171N6p1+sHOHw24MKv8zqDnMBw
+        vA8X/wQdVFr7cXzVarVtAbdarWOcLtusC3htQauB5fP5HQj0NpZdlecTw53Xw1z3bc7VD86qqMBsa4HO
+        +MDjbWNLNdPLNCwwdMItvL7ycNv1er3vWKJz/BWyJSwwdECTbyPZ9xm65TXGP8LrJkK4ipDv4txzvF9h
+        WSQLLZMb5IglGQmBLGHMgt0xOUUobDXO2vLjsFAI+NO0eVInbmDoiB94XeKw2CzcSXdXhPaQpdkQJzBb
+        PthbHeaQTWs0GocQzGdO57C9HO7CJ1iafjEDW8EFf4x6Yek95XSR8DkHsUx/ckoHxr9iWfrFXZJRLLBS
+        qbSb002EzzqNjupz6Dqey8ZdcyuBbSYsn3UThzsw12OWpFvSwJKEZbD/Os4pHLbsWZJuSQJLGpYP45c5
+        lQO/y16WSBACu8eMHAjsDEskCMFcZkYOO88SCUI2i2sRbaAnvWHQSecZkAPnb7BEghDMBWY0Th0WxjqJ
+        ATms81giQdi8vmFGDs/zjrBEfLZ/C3vehj/Af7FEgrAHe8CMHJn6A/xfqVQqe6yTmNG4RZaJsf8WoYve
+        MhwHuu4Ly8SHO+AV5rNBkie5M48d9pIZrcO5dyyRceOh2ffZVh59/xf80OxZPpbpAk/LJBYawprnoYiI
+        iIiIiIiIiIiIiMhflcv9AU9o9OFVBWqVAAAAAElFTkSuQmCC
 </value>
   </data>
 </root>
